--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/trainAndAssessment.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/trainAndAssessment.html
@@ -111,7 +111,7 @@
                 <div class="vT-chs-section-content-con">
                 <ul class="vT-chs-section-content-list">
                 		<#list typeList as typeList> 
-							<li class="sorthead1"><a href="${base.contextPath}/index/news/typeList?typeid=${typeList.id}"  target="_blank" title="${typeList.typename}">${typeList.typename}</a>(${typeList.count})</li>
+							<li class="sorthead1"><a href="${base.contextPath}/index/jdypx/typeList?typeid=${typeList.id}"  target="_blank" title="${typeList.typename}">${typeList.typename}</a>(${typeList.count})</li>
 						</#list> 
 						<#list typeAssessmentList as typeAssessmentList> 
 							<li class="sorthead1"><a href="${base.contextPath}/index/assessmentTypeList?typeid=${typeAssessmentList.id}"  target="_blank" title="${typeAssessmentList.assessmentTypeName}">${typeAssessmentList.assessmentTypeName}</a>(${typeAssessmentList.count})</li>
