--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -175,18 +175,13 @@ body{background:#f0f0f0;}
 .c_list_bidtype li{font-size:14px;float:left;line-height:18px;margin-left:5px;}
 .c_list_bidtype li a{color:#6c6c6c;text-decoration:none;line-height:18px}
 .c_list_bidtype li a:hover{color:#fff;text-decoration:none;background:#cc0000;line-height:18px}
-
-
-
-
-
 .vF_banner{width:698px;height:98px;background:red}
 .bx_log{background:url(../img/index/sys_gg_bg.gif) no-repeat top left #2b7ecc;height:60px}
 
 
 /*检索*/
 .bx_log p{float:left;font-size:20px;color:#fff;line-height:60px}
-.bx_log p.dlzc a{font-size:16px;color:#fff;text-decoration:none;line-height:60px}
+.bx_log p.dlzc a{font-size:20px;color:#fff;text-decoration:none;line-height:60px}
 .bx_log p.dlzc a:hover{text-decoration:underline;}
 .bx_log p.dlzc{font-size:16px}
 
@@ -251,14 +246,9 @@ body{background:#f0f0f0;}
 /*下载专区*/
 .main_right_cbl ul li.xzzqlinks{width:263px;height:53px;margin: 0 auto;margin-top:11px;border-radius:5px}
 .main_right_cbl ul li.xzzqlinks p{font-size:14px;line-height:18px;color:#02396f;margin-top:18px;float:left;margin-left:10px}
-
 .main_right_cbl ul li.xzzqlinks p a{font-size:14px;line-height:18px;color:#02396f;text-decoration: none}
 .main_right_cbl ul li.xzzqlinks p a:hover{color:#ba2636;text-decoration:underline}
-
-.main_right_cbl ul.xzzqlinks li.sys1{background:url(../img/download_1.gif) no-repeat top right #d5eef5;background-position:222px 13px}
-.main_right_cbl ul.xzzqlinks li.sys2{background:url(../img/download_2.gif) no-repeat top right #d5eef5;background-position:222px 13px}
-.main_right_cbl ul.xzzqlinks li.sys3{background:url(../img/download_3.gif) no-repeat top right #d5eef5;background-position:222px 13px}
-.main_right_cbl ul.xzzqlinks li.sys2 p{margin-top:10px}
+.main_right_cbl ul.xzzqlinks li.sys1{background: #d5eef5;background-position:222px 13px}
 
 /*图文锦集*/
 .main_right_cbl ul.tpjjlinks {width:265px;height:173px;float:left;margin-left:13px}
@@ -278,22 +268,30 @@ body{background:#f0f0f0;}
 .main_right_cbl ul.zjsdlinks li a:hover,.main_right_cbl ul.zjsdpic li p a:hover{text-decoration:underline;color:#ba2636}
 .main_right_cbl ul.zjsdlinks li{height:30px;line-height:30px;overflow:hidden;background:url(../img/spr.gif) no-repeat; background-position: 0 2px;padding-left:10px;}
 
+/*协会动态*/
+.main_left_block_xhdt{    width: 100%; float: left;border:1px solid #7bb9ec}
+.wz_block_line1{width:100%;background:url(../img/index/dtline1.png) no-repeat ;height:9px;    float: left;}
+.wz_block_line2{width:100%;background:url(../img/index/dtline2.png) no-repeat ;height:9px;    float: left;}
+.wz_block_line3{width:100%;background:url(../img/index/dtline3.png) no-repeat ;height:9px;    float: left;}
+
 /*调查与研究*/
 .main_right_cbl_dcyj{width:100%;background:#fff;float:left}
-.main_right_cbl_dcyj_leftText{width:95px;height:120px;float:left}
-.main_right_cbl_dcyj_rightText{width:187px;height:120px;float:right;}
-.main_right_cbl_dcyj_rightText h2{width:100%;text-align:center;margin-top:10px;}
-.main_right_cbl_dcyj_rightText h2 a{width:100%;text-align:center;color: #2b7ecc;font-size: 18px;font-weight: 500;text-decoration:none;}
+.main_right_cbl_dcyj_leftText{width:130px;height:120px;float:left}
+.main_right_cbl_dcyj_rightText{width:160px;height:120px;float:right;}
+.main_right_cbl_dcyj_rightText h2{width:100%;text-align:center;margin-top:30px;}
+.main_right_cbl_dcyj_rightText h2 a{width:100%;text-align:center;color: #2b7ecc;font-size: 20px;font-weight: bold;text-decoration:none;}
 .main_right_cbl_dcyj_rightText h2 a:hover{text-decoration:underline;}
 .main_right_cbl_dcyj_rightText ul{text-align:center;}
 .main_right_cbl_dcyj_rightText ul li a{text-decoration:none;}
 .main_right_cbl_dcyj_rightText ul li a:hover{text-decoration:underline;}
 /*培训与鉴定*/
+.main_right_block_pxyjd{width:290px;margin-left:10px;float:left;border : 1px solid #7bb9ec}
 .main_right_cbl_pxyjd{width:100%;background:#fff;float:left}
 .main_right_cbl_pxyjd h2{height:60px;background: url(../img/index/righttitle.png) no-repeat top left #2b7ecc;}
 .main_right_cbl_pxyjd h2 a{margin-left: 18px;font-size: 18px;font-weight: 500; color: white;line-height: 60px; margin-top: 8px;text-decoration: none;}
 .main_right_cbl_pxyjd h2 a:hover{text-decoration: underline;}
 
+.main_right_cbl_pxyjd_line{width:100%;background:url(../img/index/trainline.png) no-repeat ;height:9px;}
 
 .main_right_cbl_pxyjd .dldiv {width:269px;text-align:center;float:left;margin:10px;border-bottom:1px solid #1180b8; ;}
 .main_right_cbl_pxyjd dl {width:130px;text-align:center;float:left;}
