--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -167,7 +167,7 @@ body{background:#f0f0f0;}
 
 /*文章内容*/
 .c_list{overflow: hidden}
-.c_list li{font-size:14px;line-height:30px;;background:url(../img/spr.gif) no-repeat; background-position: 0 2px;padding-left:10px;overflow:hidden;height:30px}
+.c_list li{font-size:14px;line-height:30px;background:url(../img/spr.gif) no-repeat; background-position: 0 2px;padding-left:10px;overflow:hidden;height:30px}
 .c_list li a{color:#333;text-decoration:none}
 .c_list li a:hover{text-decoration:underline;color:#ba2636;}
 
@@ -181,9 +181,9 @@ body{background:#f0f0f0;}
 
 /*检索*/
 .bx_log p{float:left;font-size:20px;color:#fff;line-height:60px}
-.bx_log p.dlzc a{font-size:20px;color:#fff;text-decoration:none;line-height:60px}
+.bx_log p.dlzc a{margin-left:40px;font-size:20px;color:#fff;text-decoration:none;line-height:60px}
 .bx_log p.dlzc a:hover{text-decoration:underline;}
-.bx_log p.dlzc{font-size:16px}
+.bx_log p.dlzc{font-size:16px;height:60px;margin-left:10px;background: url(../img/index/xhdt_img.png) no-repeat center left;}
 
 
 .newslist_bl_nor{width:349px;background:#fff;float:left;}
@@ -287,8 +287,9 @@ body{background:#f0f0f0;}
 /*培训与鉴定*/
 .main_right_block_pxyjd{width:290px;margin-left:10px;float:left;border : 1px solid #7bb9ec}
 .main_right_cbl_pxyjd{width:100%;background:#fff;float:left}
-.main_right_cbl_pxyjd h2{height:60px;background: url(../img/index/righttitle.png) no-repeat top left #2b7ecc;}
-.main_right_cbl_pxyjd h2 a{margin-left: 18px;font-size: 18px;font-weight: 500; color: white;line-height: 60px; margin-top: 8px;text-decoration: none;}
+.main_right_cbl_pxyjd_title{height:60px;background: url(../img/index/righttitle.png) no-repeat top left #2b7ecc;}
+.main_right_cbl_pxyjd h2{height:60px;margin-left:10px;background: url(../img/index/pxyjd_img.png) no-repeat center left;}
+.main_right_cbl_pxyjd h2 a{margin-left: 35px;font-size: 18px;font-weight: 500; color: white;line-height: 60px; margin-top: 8px;text-decoration: none;}
 .main_right_cbl_pxyjd h2 a:hover{text-decoration: underline;}
 
 .main_right_cbl_pxyjd_line{width:100%;background:url(../img/index/trainline.png) no-repeat ;height:9px;}
