1.首页样式修改

--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -90,7 +90,7 @@
 					</#list>
                   </ul>
                 </li>
-                <li id="ch_zxzx" <#if chanel =='CH_ZXZX'> class="actv" </#if>><a href="${base.contextPath}/index/news" >资讯中心</a>
+                <li id="ch_zxzx" <#if chanel =='CH_ZXZX'> class="actv" </#if>><a href="${base.contextPath}/index/news" >法规与资讯</a>
                 <ul>
                 	<#list zxzxTypeList as typeList>   
                 		<#if typeList.id == 20>
