--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -153,10 +153,10 @@
 				</div>
 					
 				<div class="main_right_block mt13">
-					<!--右上资讯中心start-->
+					<!--右上法规与资讯start-->
 					<div class="zxzxChild">
 								<div class="zxtitle">
-									<span><a href="${base.contextPath}/index/news" >资讯中心</a></span>
+									<span><a href="${base.contextPath}/index/news" >法规与资讯</a></span>
 								</div>
 								<#list typeZxzxShowList as zxzxShow> 
 									<div class="zxcontent">
