--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsDetail.html
@@ -22,7 +22,7 @@
 <div class="main_left_block mt13">
 <div class="wz_block">
     <div class="vF_deail_currentloc">
-        <p>当前位置：<a href="${base.contextPath}/index/news" title="资讯中心" class="CurrChnlCls">资讯中心</a>
+        <p>当前位置：<a href="${base.contextPath}/index/news" title="法规与资讯" class="CurrChnlCls">法规与资讯</a>
           &nbsp;&raquo;&nbsp;<a href="${base.contextPath}/index/newsTypeList?typeid=${kgNewstype.id}" title="${kgNewstype.typename}" class="CurrChnlCls">${kgNewstype.typename}</a>
            &nbsp;&raquo;&nbsp;${newsInfo.newstitle}
         </p>
