--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
@@ -36,7 +36,7 @@
 <div class="main_left_block mt13">
 	<div class="wz_block">
 	    <div class="vF_deail_currentloc">
-	        <p>当前位置：<a href="${base.contextPath}/index/news" title="资讯中心" class="CurrChnlCls">资讯中心</a>
+	        <p>当前位置：<a href="${base.contextPath}/index/news" title="法规与资讯" class="CurrChnlCls">法规与资讯</a>
 	        &nbsp;&raquo;&nbsp;${kgType.typename} 列表页</p>
 	    </div>
 	
