--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -181,7 +181,7 @@ body{background:#f0f0f0;}
 
 /*检索*/
 .bx_log p{float:left;font-size:20px;color:#fff;line-height:60px}
-.bx_log p.dlzc a{margin-left:40px;font-size:20px;color:#fff;text-decoration:none;line-height:60px}
+.bx_log p.dlzc a{margin-left:40px;font-size:20px;font-weight:bold;color:#fff;text-decoration:none;line-height:60px}
 .bx_log p.dlzc a:hover{text-decoration:underline;}
 .bx_log p.dlzc{font-size:16px;height:60px;margin-left:10px;background: url(../img/index/xhdt_img.png) no-repeat center left;}
 
@@ -287,14 +287,16 @@ body{background:#f0f0f0;}
 /*培训与鉴定*/
 .main_right_block_pxyjd{width:290px;margin-left:10px;float:left;border : 1px solid #7bb9ec}
 .main_right_cbl_pxyjd{width:100%;background:#fff;float:left}
-.main_right_cbl_pxyjd_title{height:60px;background: url(../img/index/righttitle.png) no-repeat top left #0155d4;}
-.main_right_cbl_pxyjd h2{height:60px;margin-left:10px;background: url(../img/index/pxyjd_img.png) no-repeat center left;}
-.main_right_cbl_pxyjd h2 a{margin-left: 35px;font-size: 18px;font-weight: 500; color: white;line-height: 60px; margin-top: 8px;text-decoration: none;}
+.main_right_cbl_pxyjd_title{height:40px;background: url(../img/index/righttitle.png) no-repeat top left #0155d4;}
+.main_right_cbl_pxyjd h2{height:40px;margin-left:10px;background: url(../img/index/pxyjd_img.png) no-repeat center left;}
+.main_right_cbl_pxyjd h2 a{margin-left: 35px;font-size: 16px;font-weight: 500; color: white;line-height: 40px; margin-top: 8px;text-decoration: none;}
 .main_right_cbl_pxyjd h2 a:hover{text-decoration: underline;}
 
 .main_right_cbl_pxyjd_line{width:100%;background:url(../img/index/trainline.png) no-repeat ;height:9px;}
 
-.main_right_cbl_pxyjd .dldiv {width:269px;text-align:center;float:left;margin:10px;border-bottom:1px solid #1180b8; ;}
+.main_right_cbl_pxyjd .dldiv {width:100%;text-align:center;float:left;margin:10px 0 10px 0 ;}
+.main_right_cbl_pxyjd .bottomdldiv {width:100%;text-align:center;float:left;margin:10px 0 0px 0 ;background:url(../img/index/bottombackcolor.png) no-repeat bottom;}
+.main_right_cbl_pxyjd .dldiv_line{width:269px;text-align:center;float:left;margin-left:10px;border-bottom:1px solid #1180b8; }
 .main_right_cbl_pxyjd dl {width:130px;text-align:center;float:left;}
 .main_right_cbl_pxyjd dl dt{text-align:center;font-size:14px;color:#1180b8;font-weight:bold;background: url(../img/blue_arrow_left.gif) no-repeat;background-position: right  }
 .main_right_cbl_pxyjd dl dt a{color: #1180b8;text-decoration: none; }
